--- a/client/css/style.css
+++ b/client/css/style.css
@@ -37,3 +37,13 @@ input{
 #parameters > *{
     margin-right: 10px;
 }
+
+.rightgroup{
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+}
+
+.leftgroup{
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
